Restore support for Java 8
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>