@@ -1,6 +1,6 @@
 package org.opensearch.client.opensearch._types.query_dsl;
 
-import java.util.List;
+import java.util.Collections;
 import org.junit.Test;
 import org.opensearch.client.opensearch._types.GeoLocation;
 import org.opensearch.client.opensearch.model.ModelTestCase;
@@ -9,7 +9,7 @@ public class GeoDistanceQueryTest extends ModelTestCase {
     @Test
     public void toBuilder() {
         GeoDistanceQuery origin = new GeoDistanceQuery.Builder().field("field")
-            .location(new GeoLocation.Builder().coords(List.of(1.0)).build())
+            .location(new GeoLocation.Builder().coords(Collections.singletonList(1.0)).build())
             .build();
         GeoDistanceQuery copied = origin.toBuilder().build();
 
