@@ -1,6 +1,6 @@
 package org.opensearch.client.opensearch.core;
 
-import java.util.List;
+import java.util.Collections;
 import org.junit.Assert;
 import org.junit.Test;
 import org.opensearch.client.opensearch.core.bulk.BulkOperation;
@@ -11,7 +11,9 @@ public class BulkRequestTest extends Assert {
     @Test
     public void toBuilder() {
         BulkRequest origin = new BulkRequest.Builder().index("index")
-            .operations(List.of(new BulkOperation.Builder().delete(new DeleteOperation.Builder().id("id").build()).build()))
+            .operations(
+                Collections.singletonList(new BulkOperation.Builder().delete(new DeleteOperation.Builder().id("id").build()).build())
+            )
             .build();
         BulkRequest copied = origin.toBuilder().build();
 
